Fixed navbar icon positioning on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,17 +7,24 @@ html{
 .tsparticles {
     z-index: 0;
 }
+.nav-left{
+    display: flex;
+}
 @media screen and (min-width: 992px) {
     .nav-left {
-        display: flex;
         align-items: center;
         flex-direction: row;
     }
 }
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 991px) and (min-width: 450px) {
     .nav-left {
-        display: flex;
         margin-bottom: auto;
+    }
+}
+@media screen and (max-width: 450px){
+    .nav-left{
+        display: flex;
+        flex-direction: column;
     }
 }
 
